# pixel-slime-game

./: .gitignore
client/PixelSlimeClient/Assets/Scripts/Character/: CharacterData.cs  CharacterManager.cs  GameEvents.cs  SlimeVisual.cs
client/PixelSlimeClient/Assets/Scripts/Map/: IsometricCamera.cs  IsometricGrid.cs  IsometricMover.cs  IsometricSorter.cs
client/PixelSlimeClient/Assets/Scripts/Network/: ApiClient.cs
client/PixelSlimeClient/ProjectSettings/: ProjectSettings.asset
docs/: GDD.md  SETUP.md
server/: CMakeLists.txt  main.cpp
server/config/: config.json
server/src/controllers/: CharacterController.cpp  CharacterController.h  HouseController.h  PetController.h
server/src/models/: Character.h  House.h  Pet.h  Quest.h  User.h
server/src/services/: GrowthService.cpp  GrowthService.h  QuestService.cpp  QuestService.h
server/src/utils/: JwtUtil.cpp  JwtUtil.h  MongoUtil.cpp  MongoUtil.h
server/src/websocket/: MiniGameWS.cpp  MiniGameWS.h  VoteWS.cpp  VoteWS.h
